--- a/styles.css
+++ b/styles.css
@@ -15,11 +15,11 @@ body {
 }
 
 main {
-  /* border: 1px solid red; */
   border-radius: 20px;
   background-color: #fff;
   max-width: 320px;
   padding: 16px;
+  box-shadow: 1px 1px 5px rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -30,6 +30,8 @@ h1 {
 
 p {
   color: #7d889e;
+  padding: 0px 20px;
+  text-align: center;
 }
 
 .hero-img {
@@ -41,6 +43,4 @@ p {
   display: flex;
   flex-direction: column;
   padding: 16px;
-  /* justify-content: center;
-  align-items: center; */
 }
